--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(styles/header.css);
 :root{
---cor-de-fundo: #9949B4;
---cor-cabecalho: #FFFFFF;
+--cor-de-fundo: #dd7a9b63;
+--cor-cabecalho: #db2571;
 }
 body{
 background-color: var(--cor-de-fundo);
